fix broken alignment for radio, checkbox and toggle in safari

--- a/template/src/ui/components/Form/Checkbox/styles.css
+++ b/template/src/ui/components/Form/Checkbox/styles.css
@@ -1,7 +1,8 @@
 @import 'assets/css/variables.css';
 
 .checkbox {
-  float: left;
+  display: inline-block;
+  vertical-align: top;
   height: var(--lh-m);
   width: var(--lh-m);
   margin-right: var(--box-m);
